 Pageination for large texts?
 Subtitle speech? Maybe only possible with something like pysrt and a subtitle file. https://pypi.python.org/pypi/pysrt

EXTERNAL TODO:
--------------
 Test Windows installer on Vista/7/8
 OSX installer?
 Android TTS app for android backend

** 0.0.37 **

Added support for playSFX without caching (xbmc git: 5579740e9881717c65518b81a9a2b4d9526c3307)
Added the ability to output wavs to a tmpfs (/run/shm or /dev/shm with fallback to /tmp)
Added speaking for typing in the numeric and IP address inputs
Added backend for eckythump's HTTP speech wav server

** 0.0.36 **

Improvements to speaking of list item text on F3

** 0.0.35 **

Added the ability to select player in eSpeak
Added support for playing via paplayer and MPlayer
Fix for encoding error in Pico2Wave
Added generic speaking of window text on F2
Added generic speaking of list item text on F3

** 0.0.34 **

Enable wave output in Flite
Merge Flite backend for ATV2 into main Flite backend
Fix for speech dispatcher always showing available

** 0.0.33 **

Fix for a bug with several backends causing XBMC to hang on shutdown
Added the settings option for espeak 'Play Speech Directly Via eSpeak' which bypasses writing to wav
Fix for speech-dispatcher not being available/working on some platforms (Ubuntu?)

** 0.0.32 **

Added setting to Advanced 'Override Poll Interval' and subsetting 'Poll Interval (ms)'
Various internal changes to eSpeak and pico2wave

** 0.0.31 **

Added a settings section 'Advanced'
Added setting 'Advanced::Enable Debug Logging' - currently defaults to True
Added setting 'Advanced::Disable Broken TTS Engines' defaults to True
Changed name of ctypes eSpeak to eSpeak (ctypes) and marked as broken
Changed name of 'eSpeak (XBMC Audio)' to eSpeak, and it now works both via internal and external sound output

** 0.0.30 **

Added speaking of addon status including addon download progress